--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^6.0.0",
     "execa": "^4.0.3",
     "fs-extra": "^9.0.1",
-    "inquirer": "^7.3.2"
+    "inquirer": "^7.3.2",
+    "ora": "^4.0.5"
   }
 }
